charts/kube-resources/gstore-sales/templates/02-service-web.yaml
---
# Source: gstore-sales/templates/02-service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: gstore-sales
  namespace: gstore-app-ns
  labels:
    main-app: gstore-application
    app: gstore-sales
  annotations:
    mcm.ibm.com/service-discovery: "{}"
spec:
  type: ClusterIP
  ports:
    - name: my-http
      port: 
      targetPort: 
  selector:
    main-app: gstore-application
    app: gstore-sales
